# anton_engine_game

./: .gitignore  CMakeLists.txt
assets/: barrel.mesh  boxes1.mesh
scripts/: CMakeLists.txt  asteroid.cpp  asteroid.hpp  projectile.cpp  projectile.hpp  spaceship.cpp  spaceship.hpp
